Fixed time input clipping issue

--- a/client/src/pages/pages.scss
+++ b/client/src/pages/pages.scss
@@ -99,7 +99,7 @@
     position: initial;
     color: grey;
     pointer-events: none;
-    width: 8rem;
+    width: 6rem;
     transition: color ease 0.3s;
     
     &:hover {
